// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interview Card Component when the component is not selected does not show additional buttons 1`] = `
<CardListItem
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div>
    5:55pm
  </div>
  <div>
    test
  </div>
</CardListItem>
`;

exports[`Interview Card Component when the component is not selected returns to unselected state on mouse leave event 1`] = `
<CardListItem
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div>
    5:55pm
  </div>
  <div>
    test
  </div>
</CardListItem>
`;

exports[`Interview Card Component when the component is selected shows additional buttons 1`] = `
<CardListItem
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div>
    5:55pm
  </div>
  <div>
    test
  </div>
  <div>
    <Link
      replace={false}
      to="applications/test/interviews/test"
    >
      <Button>
        edit
      </Button>
    </Link>
    <Button
      onClick={[Function]}
    >
      Delete
    </Button>
  </div>
</CardListItem>
`;
